Update vm template in migration tool

--- a/java/jflex/migration/TestCase.java.vm
+++ b/java/jflex/migration/TestCase.java.vm
@@ -43,7 +43,9 @@ public class $testClassName extends AbstractGoldenTest {
     compareSystemOutWith(golden);
 
     $scannerClassName scanner = scannerFactory.createScannerForFile(golden.inputFile);
-    scanner.yylex();
+    while (!scanner.zzAtEof()) {
+      System.out.println(scanner.yylex());
+    }
   }
 #end
 
