Rename to yyatEOF()

--- a/java/jflex/migration/TestCase.java.vm
+++ b/java/jflex/migration/TestCase.java.vm
@@ -43,7 +43,7 @@ public class $testClassName extends AbstractGoldenTest {
     compareSystemOutWith(golden);
 
     $scannerClassName scanner = scannerFactory.createScannerForFile(golden.inputFile);
-    while (!scanner.zzAtEof()) {
+    while (!scanner.yyatEOF()) {
       System.out.println(scanner.yylex());
     }
   }
