--- a/java/jflex/ucd_generator/emitter/unicode_properties/UnicodeProperties.java.vm
+++ b/java/jflex/ucd_generator/emitter/unicode_properties/UnicodeProperties.java.vm
@@ -54,7 +54,7 @@ public class UnicodeProperties {
   private Map<String, IntCharSet> propertyValueIntervals = new HashMap<>();
   private String caselessMatchPartitions;
   private int caselessMatchPartitionSize;
-  private IntCharSet caselessMatches[];
+  private IntCharSet[] caselessMatches;
 
   /**
    * Unpacks the Unicode data corresponding to the default Unicode version: "{@value
