--- a/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
+++ b/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
@@ -41,7 +41,7 @@ class $className {
   };
 
   public static final String[] intervals = {
-    "$intervals"
+    $intervals
   };
 
   public static final String[] propertyValueAliases = {
