--- a/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
+++ b/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
@@ -26,9 +26,11 @@
  * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY
  * WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-package $packageName;
+// TODO(regisd) Move in same package
+package ${packageName}.data;
 
-class $className {
+// TODO(regisd) Restrict to package visibility
+public class $className {
 
   // Only holds constants.
   private $className() {}
@@ -38,6 +40,14 @@ class $className {
 
   public static final String[] propertyValues = {
     "$propertyValues"
+  };
+
+  public static final String[] intervals = {
+    $intervals
+  };
+
+  public static final String[] propertyValueAliases = {
+    "$propertyValueAliases"
   };
 
   /** Maximum caseless partition size. */
