Group propertyValueAlises in pairs.

--- a/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
+++ b/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
@@ -39,7 +39,7 @@ public class $className {
   public static final int maximumCodePoint = 0x$String.format("%x", $maxCodePoint);
 
   public static final String[] propertyValues = {
-    "$propertyValues"
+    $propertyValues
   };
 
   public static final String[] intervals = {
@@ -47,7 +47,7 @@ public class $className {
   };
 
   public static final String[] propertyValueAliases = {
-    "$propertyValueAliases"
+    $propertyValueAliases
   };
 
   /** Maximum caseless partition size. */
