--- a/java/de/jflex/testing/unicodedata/generator/UnicodeAgeTest_x_y.java.vm
+++ b/java/de/jflex/testing/unicodedata/generator/UnicodeAgeTest_x_y.java.vm
@@ -1,6 +1,5 @@
 /*
- * Copyright (C) 2013 Steve Rowe <sarowe@gmail.com>
- * Copyright (C) 2017-2020 Google, LLC.
+ * Copyright (C) 2021 Google, LLC.
  *
  * License: https://opensource.org/licenses/BSD-3-Clause
  *
@@ -24,7 +23,7 @@
  * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY
  * WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-package de.jflex.testcase.unicode.unicode_2_0;
+package $javaPackage;
 
 import static com.google.common.truth.Truth.assertThat;
 import static de.jflex.testing.unicodedata.Ages.assertAgeInterval;
@@ -34,13 +33,13 @@ import jflex.core.unicode.UnicodeProperties;
 import org.junit.Before;
 import org.junit.Test;
 
-public class UnicodeAgeTest_2_0 {
+public class $testClassName {
 
   UnicodeProperties properties;
 
   @Before
   public void init() throws Exception {
-    properties = new UnicodeProperties("2.0");
+    properties = new UnicodeProperties("$unicodeVersion");
   }
 
   @Test
@@ -53,38 +52,38 @@ public class UnicodeAgeTest_2_0 {
   @Test
   public void ageIntervals_1_1() throws Exception {
     assertAgeInterval(
-        ScannerFactory.of(UnicodeAge_2_0_age_1_1::new),
-        UnicodeAge_2_0_age_1_1.YYEOF,
-        "UnicodeAge_2_0_age_1_1.output");
+        ScannerFactory.of(${scannerPrefix}_1_1::new),
+        ${scannerPrefix}_1_1.YYEOF,
+        "${scannerPrefix}_1_1.output");
   }
 
   /** Tests character class syntax of the Unicode 2.0 Age=2.0 property. */
   @Test
   public void ageIntervals_2_0() throws Exception {
     assertAgeInterval(
-        ScannerFactory.of(UnicodeAge_2_0_age_2_0::new),
-        UnicodeAge_2_0_age_2_0.YYEOF,
-        "UnicodeAge_2_0_age_2_0.output");
+        ScannerFactory.of(${scannerPrefix}_2_0::new),
+        ${scannerPrefix}_2_0.YYEOF,
+        "${scannerPrefix}_2_0.output");
   }
 
   /**
-   * Tests subtracting Age Unicode property values in character sets for Unicode 2.0, e.g. {@code
-   * [\p{Age:2.0}--\p{Age:1.1}]}.
+   * Tests subtracting Age Unicode property values in character sets for Unicode 2.0,
+   * e.g. {@code [\p{Age:2.0}--\p{Age:1.1}]}.
    */
   @Test
   public void ageIntervals_substraction() throws Exception {
     assertAgeInterval(
-        ScannerFactory.of(UnicodeAge_2_0_age_subtraction::new),
-        UnicodeAge_2_0_age_2_0.YYEOF,
-        "UnicodeAge_2_0_age_subtraction.output");
+        ScannerFactory.of(${scannerPrefix}_subtraction::new),
+        ${scannerPrefix}_2_0.YYEOF,
+        "${scannerPrefix}_subtraction.output");
   }
 
   /** Tests character class syntax of the Unicode 2.0 Age=Unassigned property. */
   @Test
   public void ageIntervals_unassigned() throws Exception {
     assertAgeInterval(
-        ScannerFactory.of(UnicodeAge_2_0_age_unassigned::new),
-        UnicodeAge_2_0_age_unassigned.YYEOF,
-        "UnicodeAge_2_0_age_unassigned.output");
+        ScannerFactory.of(${scannerPrefix}_unassigned::new),
+        ${scannerPrefix}_unassigned.YYEOF,
+        "${scannerPrefix}_unassigned.output");
   }
 }
