Add missing throw in UnicodeAgeTest vm

--- a/java/de/jflex/testing/unicodedata/generator/UnicodeAgeTest_x_y.java.vm
+++ b/java/de/jflex/testing/unicodedata/generator/UnicodeAgeTest_x_y.java.vm
@@ -37,7 +37,7 @@ import org.junit.Test;
 public class $testClassName {
 
   @Test
-  public void age() {
+  public void age() throws Exception {
     UnicodeProperties properties = new UnicodeProperties("$unicodeVersion");
   #foreach ( $a in $ages )
     assertThat(properties.getPropertyValues()).contains("age=$a");
