--- a/java/de/jflex/migration/unicodedatatest/UnicodeAgeSubtraction.flex.vm
+++ b/java/de/jflex/migration/unicodedatatest/UnicodeAgeSubtraction.flex.vm
@@ -1,4 +1,5 @@
 /*
+ * Copyright (C) 2013 Steve Rowe <sarowe@gmail.com>
  * Copyright (C) 2021 Google, LLC.
  *
  * License: https://opensource.org/licenses/BSD-3-Clause
@@ -23,52 +24,23 @@
  * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY
  * WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-package de.jflex.migration.unicodedatatest;
+package $javaPackage;
 
-import static com.google.common.collect.ImmutableList.toImmutableList;
+import de.jflex.testing.unicodedata.AbstractEnumeratedPropertyDefinedScanner;
+%%
 
-import com.google.common.collect.ImmutableList;
-import de.jflex.util.javac.JavaPackageUtils;
-import de.jflex.version.Version;
-import java.io.IOException;
-import java.nio.file.Path;
-import org.apache.velocity.runtime.parser.ParseException;
+%unicode $unicodeVersion
+%public
+%class $className
+%extends AbstractEnumeratedPropertyDefinedScanner
 
-abstract class AbstractGenerator {
-  protected static final String ROOT_DIR =
-      JavaPackageUtils.getPathForClass(AbstractGenerator.class);
+%type int
+%standalone
 
-  // TODO(regisd) Add This in UnicodeProperties
-  private static final ImmutableList<Version> KNOWN_VERSIONS =
-      ImmutableList.of(
-          new Version(1, 1),
-          new Version(2, 0),
-          new Version(2, 1),
-          new Version(3, 0),
-          new Version(3, 1),
-          new Version(3, 2),
-          new Version(4, 0),
-          new Version(4, 1),
-          new Version(5, 0),
-          new Version(5, 1),
-          new Version(5, 2),
-          new Version(6, 0),
-          new Version(6, 1),
-          new Version(6, 2),
-          new Version(6, 3),
-          new Version(7, 0),
-          new Version(8, 0),
-          new Version(9, 0),
-          new Version(10, 0),
-          new Version(11, 0),
-          new Version(12, 0),
-          new Version(12, 1));
+%%
 
-  protected static ImmutableList<Version> olderAges(Version version) {
-    return KNOWN_VERSIONS.stream()
-        .filter(v -> Version.EXACT_VERSION_COMPARATOR.compare(v, version) <= 0)
-        .collect(toImmutableList());
-  }
-
-  abstract void generate(Path outDir) throws IOException, ParseException;
-}
+<<EOF>>                    { return YYEOF; }
+#foreach ( $agepair in $ages )
+[\p{Age:${agepair.second()}}--\p{Age:$agepair.first()}] { setCurCharPropertyValue(yytext(), "[\\p{Age:2.0}--\\p{Age:1.1}]"); }
+#end
+[^] { }
