Migrate testsuite/testcases/src/test/cases/unicode-age/UnicodeAge_2_1

--- a/java/de/jflex/migration/unicodedatatest/BUILD.vm
+++ b/java/de/jflex/migration/unicodedatatest/BUILD.vm
@@ -25,6 +25,7 @@ java_test(
         "//java/de/jflex/testcase/resources:All.Unicode.BMP.characters.input",
     ],
     deps = [
+        "//java/de/jflex/util/javac:package_util",
         "//java/de/jflex/testing/unicodedata",
         "//java/de/jflex/util/scanner:scanner_factory",
         "//jflex/src/main/java/jflex/core/unicode",
