Initialize scanners with the correct maxCodePoint.

--- a/java/de/jflex/migration/unicodedatatest/UnicodeAge.flex.vm
+++ b/java/de/jflex/migration/unicodedatatest/UnicodeAge.flex.vm
@@ -38,6 +38,10 @@ import de.jflex.testing.unicodedata.AbstractEnumeratedPropertyDefinedScanner;
 %type int
 %standalone
 
+%init{
+  super($maxCodePoint);
+%init}
+
 %%
 
 <<EOF>>     { return YYEOF;}
