--- a/java/de/jflex/migration/unicodedatatest/UnicodeAgeSubtraction.flex.vm
+++ b/java/de/jflex/migration/unicodedatatest/UnicodeAgeSubtraction.flex.vm
@@ -39,6 +39,10 @@ import de.jflex.testing.unicodedata.AbstractEnumeratedPropertyDefinedScanner;
 %type int
 %standalone
 
+%init{
+  super($maxCodePoint);
+%init}
+
 %%
 
 <<EOF>>                    { return YYEOF; }
