Add deps for Blocks

--- a/java/de/jflex/migration/unicodedatatest/BUILD.vm
+++ b/java/de/jflex/migration/unicodedatatest/BUILD.vm
@@ -69,6 +69,10 @@ java_test(
         ":UnicodeBlocks_${underscoreVersion}",
         "UnicodeBlocksTest_${underscoreVersion}.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
