Rename Ages to UnicodeDataScanners because it contains helpers for any scanner.

--- a/java/de/jflex/migration/unicodedatatest/testage/UnicodeAgeTest_x_y.java.vm
+++ b/java/de/jflex/migration/unicodedatatest/testage/UnicodeAgeTest_x_y.java.vm
@@ -29,7 +29,7 @@ import static com.google.common.truth.Truth.assertThat;
 import static de.jflex.util.javac.JavaPackageUtils.getPathForClass;
 
 import de.jflex.testing.unicodedata.AbstractEnumeratedPropertyDefinedScanner;
-import de.jflex.testing.unicodedata.Ages;
+import de.jflex.testing.unicodedata.UnicodeDataScanners;
 import de.jflex.util.scanner.ScannerFactory;
 import java.io.IOException;
 import java.nio.file.Path;
