--- a/java/de/jflex/migration/unicodedatatest/testblock/UnicodeBlocksTest.java.vm
+++ b/java/de/jflex/migration/unicodedatatest/testblock/UnicodeBlocksTest.java.vm
@@ -23,7 +23,7 @@
  * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY
  * WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-package de.jflex.testcase.unicode.unicode_2_1;
+package de.jflex.testcase.unicode.unicode_${unicodeVersion.underscoreVersion()};
 
 import static com.google.common.truth.Truth.assertThat;
 
@@ -33,14 +33,14 @@ import de.jflex.testing.unicodedata.UnicodeDataScanners;
 import de.jflex.util.scanner.ScannerFactory;
 import org.junit.Test;
 
-/** Test that parsing all Unicode codepoints detects the correct block ranges for Unicode 2.1. */
-public class UnicodeBlocksTest_2_1 {
+/** Test that parsing all Unicode codepoints detects the correct block ranges for Unicode ${unicodeVersion}. */
+public class UnicodeBlocksTest_${unicodeVersion.underscoreVersion()} {
   @Test
   public void testBlocks() throws Exception {
     ImmutableList<BlockSpec> blocks = UnicodeDataScanners.getBlocks(
-        ScannerFactory.of(UnicodeBlocks_2_1::new),
-        UnicodeBlocks_2_1.YYEOF,
-        UnicodeDataScanners.Dataset.BMP
+        ScannerFactory.of(UnicodeBlocks_${unicodeVersion.underscoreVersion()}::new),
+        UnicodeBlocks_${unicodeVersion.underscoreVersion()}.YYEOF,
+        UnicodeDataScanners.Dataset.${dataset}
     );
     assertThat(blocks).containsAllOf(
         #set($separator="")
